--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -42,21 +42,11 @@ affiliation:
 
 
 abstract: |
-  One or two sentences providing a **basic introduction** to the field,  comprehensible to a scientist in any discipline.
-  
-  Two to three sentences of **more detailed background**, comprehensible  to scientists in related disciplines.
-  
-  One sentence clearly stating the **general problem** being addressed by  this particular study.
-  
-  One sentence summarizing the main result (with the words "**here we show**" or their equivalent).
-  
-  Two or three sentences explaining what the **main result** reveals in direct comparison to what was thought to be the case previously, or how the  main result adds to previous knowledge.
-  
-  One or two sentences to put the results into a more **general context**.
-  
-  Two or three sentences to provide a **broader perspective**, readily comprehensible to a scientist in any discipline.
-  
-  <!-- https://tinyurl.com/ybremelq -->
+  Every day, individuals have to weigh the value of the reward when reaching a goal against the required effort.
+  However, effort is not inherently aversive to all individuals, which has often been neglected by previous approaches to quantify the subjective value of effort.
+  One of them is the Cognitive Effort Discounting paradigm by Westbrook et al. (2013), which can quantify the subjective values of the difficult levels of the n-back task against the easiest level.
+  We argue that adapting the paradigm and the method of computing the willingness to exert effort allows two crucial things: Quantifying subjective values without assuming that the easiest level is preferred, and quantifying subjective values for tasks with no objective order of task load.
+  We aim to replicate the analysis of Westbrook et al. (2013) with our adaptation, the Cognitive and Emotion Regulation Effort Discounting paradigm (CERED).
   
 keywords          : "effort discounting, registered report, specification curve analysis, need for cognition, n-back"
 wordcount         : "X"
