added a new ref

--- a/06_Paper/COG-ED/ref_COG-ED.bib
+++ b/06_Paper/COG-ED/ref_COG-ED.bib
@@ -1,5 +1,21 @@
 % Encoding: UTF-8
 
+@TechReport{Wu2021,
+  author   = {Wu, Raymond and Ferguson, Amanda and Inzlicht, Michael},
+  title    = {Do humans prefer cognitive effort over doing nothing?},
+  year     = {2021},
+  month    = nov,
+  note     = {type: article},
+  abstract = {Humans and other animals find mental (and physical) effort aversive and have the fundamental drive to avoid it. However, exerting no effort, doing nothing, is also aversive: it leads to boredom. Here, we ask whether people choose to exert effort when the alternative is to do nothing at all. Across nine studies, participants completed variants of the demand selection task, in which they repeatedly selected between a cognitively effortful task (e.g., simple addition, Stroop task) and a task that required no effort (e.g., doing nothing, watching the computer complete the Stroop). We then tabulated people’s choices. Across all studies and a mini meta-analysis, we found no evidence of effort avoidance and sometimes even a preference for effort when the alternative was doing nothing. Our findings reveal the limits of effort avoidance, suggesting that people do not seek to completely minimize effort expenditure.},
+  doi      = {10.31234/osf.io/d2gkf},
+  file     = {Full Text PDF:https\://psyarxiv.com/d2gkf/download?format=pdf:application/pdf},
+  keywords = {Social and Behavioral Sciences, Cognitive Psychology},
+  language = {en-us},
+  school   = {PsyArXiv},
+  url      = {https://psyarxiv.com/d2gkf/},
+  urldate  = {2021-11-25},
+}
+
 @Article{Hartmann2011,
   author    = {Hartmann, Andrea S. and Rief, Winfried and Hilbert, Anja},
   journal   = {Perceptual and Motor Skills},
