--- a/06_Paper/COG-ED/ref_COG-ED.bib
+++ b/06_Paper/COG-ED/ref_COG-ED.bib
@@ -11924,6 +11924,23 @@ These findings suggest that subjective listening effort depends on factors inclu
   urldate    = {2021-11-19},
 }
 
+@Book{Luce1991,
+  author     = {Luce, R. Duncan},
+  publisher  = {Oxford University Press},
+  title      = {Response {Times}: {Their} {Role} in {Inferring} {Elementary} {Mental} {Organization}},
+  year       = {1991},
+  address    = {New York},
+  isbn       = {9780195070019},
+  series     = {Oxford {Psychology} {Series}},
+  abstract   = {The author of this book is a distinguished experimental psychologist. This book provides a clear, well-balanced, and comprehensive treatment of the mathematical theory of human response time and the role it plays in our understanding of the mind's structure. Focusing on the conceptual issues entailed in the modelling of response time, this book rigorously reviews the relevant experimental data and discusses the importance of analyzing data in terms of the hazard function.},
+  doi        = {10.1093/acprof:oso/9780195070019.001.0001},
+  keywords   = {experimental psychology, human response time, mind, hazard function},
+  language   = {eng},
+  shorttitle = {Response {Times}},
+  url        = {https://oxford.universitypressscholarship.com/10.1093/acprof:oso/9780195070019.001.0001/acprof-9780195070019},
+  urldate    = {2021-12-01},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
